Add AI agent build setup notes to README
Documents the complete build environment setup, FLINT 3.x compatibility
patches, and known test failures so AI coding agents working in fresh
sandboxes don't have to rediscover these requirements every session.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>